<resources>
    <string name="app_name">FavMaps</string>
    <string name="title_activity_maps">FavMaps</string>
    <string name="page_title" />
    <string name="search" />
    <string name="search_title" />
    <string name="search_hint" />
    <string name="text" />
    <string name="text_filter_1">Food</string>
    <string name="text_filter_2">Drinks</string>
    <string name="text_filter_3">Night life</string>
    <string name="text_filter_4">View points</string>
    <string name="text_filter_5">Museums</string>
    <string name="text_filter_6">Others</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Sign up</string>
    <string name="btn_link_to_login">Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your mail to sent you an email with reset instructions.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_btn">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="or">OR</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_password_link">Get link to reset a password</string>
    <string name="number_of_followers">24234 followers</string>
    <string name="number_of_following">3423 following</string>
    <string name="bio">Goddess Diana from Rome\nInterested in hunters, wild animals, crossroads and the Moon</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="edit_description">Edit bio</string>
    <string name="change_photo">Change photo</string>
    <string name="fab_content_desc">Add new place</string>
</resources>