<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.favmaps.ProfileActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="140sp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|start"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
        app:srcCompat="@drawable/diana"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/text_view_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/number_of_followers"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_view_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/number_of_following"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bio"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>